# localchatbot

./: README.md  app.py  hello.py  initialideas.ipynb  legal.py  pyproject.toml  testapp.py
documents/: check.ipynb  transaction_data.csv.csv
temp/: example1.csv
